add_executable(pa1 pa1.cpp utils.cpp)
target_include_directories(pa1 PRIVATE "${DATA_STRUCTURE_INCLUDE}")
target_link_libraries(pa1 PRIVATE Deque PRIVATE DoubleLinkedList)
add_executable(pa1_eval evaluate.cpp)
add_custom_target(pa1_src ALL "${TOOLS_DIR}/expand_header.py" -I "${DATA_STRUCTURE_INCLUDE}" -o "${CMAKE_BINARY_DIR}/pa1.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/pa1.cpp")
