add_executable(pa4 graph.cpp pa4.cpp utils.cpp)
target_include_directories(pa4 PRIVATE "${DATA_STRUCTURE_INCLUDE}")
target_compile_options(pa4 PRIVATE "$<$<C_COMPILER_ID:Clang>:-fsanitize=address,leak>")
target_link_options(pa4 PRIVATE "$<$<C_COMPILER_ID:Clang>:-fsanitize=address,leak>")
target_link_libraries(pa4 PRIVATE Deque)
add_executable(pa4_eval evaluate.cpp)
set(PA4_SRC_DIR "${CMAKE_BINARY_DIR}/pa4_src")
file(MAKE_DIRECTORY "${PA4_SRC_DIR}")

pa_test(pa4 1 "\"[('A','C'), ('A','B'), ('A','D'), ('B','C'), ('B','D'), ('B','E'), ('B','F'), ('C','F'), ('C','E'), ('End','DFS')]\"" "A B C E F D")
pa_test(pa4 1 "\"[('A','C'), ('A','B'), ('A','D'), ('B','C'), ('B','D'), ('B','E'), ('B','F'), ('C','F'), ('C','E'), ('End','BFS')]\"" "A B C D E F")
pa_test(pa4 1 "\"[('A','C'), ('A','B'), ('A','D'), ('B','C'), ('B','D'), ('B','E'), ('B','F'), ('C','F'), ('C','E'), ('G','H'), ('End','DFS')]\"" "A B C E F D\nG H")
pa_test(pa4 1 "\"[('A','B'), ('A','C'), ('A','D'), ('B','F'), ('C','F'), ('H','G'), ('E','J'), ('J','I'), ('End','DFS')]\"" "A B F C D\nE J I\nG H")
pa_test(pa4 1 "\"[('A','B'), ('A','C'), ('A','D'), ('B','F'), ('B','F'), ('C','F'), ('H','G'), ('E','J'), ('J','I'), ('End','DFS')]\"" "A B F C D\nE J I\nG H")
pa_test(pa4 2 "\"[('A','B'), ('B','C'), ('A','C')]\"" "1")
pa_test(pa4 2 "\"[('A','B'), ('A','C'), ('C','D'), ('C','E'), ('B','D'), ('D','E')]\"" "2")
pa_test(pa4 2 "\"[('A','B'), ('A','C'), ('C','D'), ('C','E'), ('D','B'), ('D','E'), ('C','F'), ('A','F')]\"" "3")
pa_test(pa4 2 "\"[('A','B'), ('B','C')]\"" "0")
pa_test(pa4 2 "\"[('A','B'), ('B','C'), ('C','D'), ('D','B')]\"" "1")
pa_test(pa4 2 "\"[('A','B'), ('B','C'), ('C','D'), ('D','B'), ('D','A')]\"" "2")
pa_test(pa4 2 "\"[('A','B'), ('B','C'), ('C','D'), ('D','B'), ('D','A'), ('D','E')]\"" "2")
pa_test(pa4 3 "\"[('A','B'), ('A','C'), ('B','F'), ('F','E'), ('C','E'),('C','D')]\"" "A B C D F E")
pa_test(pa4 3 "\"[('A','B'), ('A','D'), ('B','C'), ('C','E'), ('D','E'), ('E','F')]\"" "A B C D E F")
pa_test(pa4 3 "\"[('B','C'), ('C','D'), ('D','B')]\"" "error")
pa_test(pa4 4 "\"[('A','B'), ('B','C'), ('C','A')]\"" "1")
pa_test(pa4 4 "\"[('A','B'), ('B','C'), ('A','C')]\"" "0")
pa_test(pa4 4 "\"[('A','B'), ('A','C'), ('C','D'), ('C','E'), ('D','B'), ('D','E')]\"" "0")
pa_test(pa4 4 "\"[('A','B'), ('A','C'), ('C','D'), ('E','C'), ('D','B'), ('D','E')]\"" "1")
pa_test(pa4 4 "\"[('A','B'), ('A','C'), ('C','D'), ('E','C'), ('D','B'), ('D','E'), ('C','F'), ('F','A')]\"" "2")
pa_test(pa4 5 "\"[('A-B',10),('A-C',3),('B-D',5),('C-B',2),('C-E',15),('A-D',20),('D-E',11),('A','E')]\"" "A C E 18")
pa_test(pa4 5 "\"[('A-B',10),('A-C',3),('B-D',5),('C-B',2),('C-E',15),('A-D',20),('D-E',11),('A','D')]\"" "A C B D 10")
pa_test(pa4 5 "\"[('A-B',10),('A-C',3),('B-D',5),('C-B',2),('C-E',15),('A-D',20),('D-E',11),('D','A')]\"" "error")
pa_test(pa4 6 "\"[('A-B',4),('B-C',9),('B-D',1),('C-D',10),('D-C',8),('D-A',-2)]\"" "0 4 13 5\n-1 0 9 1\n8 12 0 10\n-2 2 8 0")
pa_test(pa4 6 "\"[('A-B',4),('A-F',3),('B-F',6),('B-C',9),('F-E',-2),('E-F',5),('C-E',-3),('E-C',8),('E-D',6)]\"" "0 4 9 7 1 3\nINF 0 9 10 4 6\nINF INF 0 3 -3 2\nINF INF INF 0 INF INF\nINF INF 8 6 0 5\nINF INF 6 4 -2 0")
pa_test(pa4 6 "\"[('A-B',4),('B-C',9),('C-E',-2),('E-C',8),('B-H',1),('A-H',4),('H-C',3),('B-F',6),('A-G',7),('G-B',-4),('B-G',8),('G-F',7),('F-E',6),('E-F',5),('E-D',6)]\"" "0 3 7 11 5 9 7 4\nINF 0 4 8 2 6 8 1\nINF INF 0 4 -2 3 INF INF\nINF INF INF 0 INF INF INF INF\nINF INF 8 6 0 5 INF INF\nINF INF 14 12 6 0 INF INF\nINF -4 0 4 -2 2 0 -3\nINF INF 3 7 1 6 INF 0")
